Archive2/49/2adbb676b45277/output
main.cpp: In member function 'void Point::TellX()':
main.cpp:12:54: error: expected ';' before '}' token
     void TellX() { std::cout << "X: " << _x << "\r\n"};
                                                      ^
main.cpp: In function 'int main()':
main.cpp:24:14: warning: unused variable 'y' [-Wunused-variable]
     unsigned y = ThePoint.y();  // Use y() as an r-value.
              ^
